--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <label for="end_date">End Date:</label>
         <input type="date" id="end_date" name="end_date"><br><br>
         <label for="num_of_photos">Number of Photos:</label>
-        <input type="number" id="num_of_photos" name="num_of_photos"><br><br>
+        <input type="number" min="0" id="num_of_photos" name="num_of_photos"><br><br>
         <input type="submit" value="Submit">
     </form>
 
